--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -7,13 +7,13 @@
 
     <servlet>
         <servlet-name>hello</servlet-name>
-        <servlet-class>com.geekcap.vmturbo.HelloWorldServlet</servlet-class>
+        <servlet-class>jstolc.HelloWorldServlet</servlet-class>
         <load-on-startup>1</load-on-startup>
     </servlet>
 
     <servlet-mapping>
         <servlet-name>hello</servlet-name>
-        <url-pattern>/hello</url-pattern>
+        <url-pattern>/</url-pattern>
     </servlet-mapping>
 
 </web-app>
